# LabMeccEs_2025

./: .gitignore  01_Linux_VSCode.md  02_Linux_Commands_Tools.md  03_Python_Basics_I.md  03_Python_Overview.md  04_Python_Basics_II.md  05_Python_Basics_III.md  06_ROS.md  07_Gazebo.md  08_Nav.md  README.md
Python_Examples/: data.txt  filter.py  main_filtering.py  matplot.py
ROS_Examples/custom_interface/: CMakeLists.txt  package.xml
ROS_Examples/custom_interface/msg/: CustomMsg.msg
ROS_Examples/custom_interface/srv/: CustomSrv.srv
ROS_Examples/python_node/: package.xml  setup.cfg  setup.py
ROS_Examples/python_node/config/: python_node.config.yaml
ROS_Examples/python_node/launch/: test.launch.yaml
ROS_Examples/python_node/python_node/: pub_node.py  sub_node.py
ROS_Examples/robot_description_example/: package.xml  setup.cfg  setup.py
ROS_Examples/robot_description_example/urdf/: robot.urdf
ROS_Examples/ros2_pkg_template_python/: package.xml  setup.cfg  setup.py
ROS_Examples/test_pkg/: package.xml  setup.py
ROS_Examples/test_pkg/test_pkg/: talker_node.py
